[수정] 팔로우,팔로워 리스트 내 유저 프사 표시

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -2521,6 +2521,7 @@
                                     <div class="list-group">
                                         <div class="list-group-item d-flex justify-content-between align-items-center">
                                             <div>
+                                                <img src="${follower.toUser.profileImg}" class="profile-img rounded-circle me-2" alt="프로필 이미지">
                                                 <p>${follower.toUser.id}</p>
                                                 <p>${follower.toUser.name}</p>
                                             </div>
@@ -2572,6 +2573,7 @@
                         <div class="list-group">
                             <div class="list-group-item d-flex justify-content-between align-items-center">
                                 <div>
+                                    <img src="${following.fromUser.profileImg}" class="profile-img rounded-circle me-2">
                                     <p>${following.fromUser.id}</p>
                                     <p>${following.fromUser.name}</p>
                                 </div>
